tests/e2e/semantics/output_assignment_existing_var.error
Error: syntax error in story at line 2, column 22

2|    foreach [1, 2, 3] as x
                           ^

E0138: Output must be unique. Can not use existing `x`.
