tests/e2e/semantics/output_assignment_existing_var.story
x = 1
foreach [1, 2, 3] as x
    a = 1
